p2/elements/service_app1.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  annotations:
    spec.ingressClassName: traefik_app1
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  selector:
    app: app1 
  ports:
    - protocol: TCP 
      port: 80
  type: ClusterIP


# le nom de l'application app1
# le port http (dans notre cas) de notre application: 8080
# le port exposé: 80
