p2/elements/ingress_app2.yaml
# ingress-app2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  annotations:
    spec.ingressClassName: traefik-app2
spec:
  rules:
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
